--- a/Wrapsy/app/src/main/res/drawable/edit_text_bg.xml
+++ b/Wrapsy/app/src/main/res/drawable/edit_text_bg.xml
@@ -1,6 +1,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#E6D8E9"/>
-    <stroke android:width="1dp" android:color="#E6D8E9"/>
+    <solid android:color="#F6DCFB"/>
+    <stroke android:width="1dp" android:color="#F6E9FA"/>
     <corners android:radius="8dp"/>
 </shape>
