--- a/Wrapsy/app/src/main/res/layout/activity_about_us.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_about_us.xml
@@ -16,35 +16,39 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp">
-
-            <LinearLayout
+            android:layout_height="0dp"
+            android:orientation="vertical">
+            <RelativeLayout
+                android:id="@+id/top_bar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center_vertical">
+                android:padding="16dp">
 
                 <ImageView
-                    android:id="@+id/iv_favorites"
+                    android:id="@+id/basketIcon"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:src="@drawable/ic_wrapsy"
                     android:layout_alignParentStart="true"
-                    android:layout_margin="12dp" />
+                    android:layout_centerVertical="true"
+                    android:layout_margin="5dp"
+                    android:contentDescription="Shopping basket"
+                    android:padding="8dp"
+                    android:src="@drawable/ic_wrapsy" />
 
                 <ImageView
-                    android:id="@+id/iv_notifications"
+                    android:id="@+id/menuIcon"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_alignParentEnd="true"
-                    android:layout_margin="16dp"
+                    android:layout_centerVertical="true"
+                    android:layout_margin="5dp"
                     android:background="@drawable/circleyellow"
+                    android:contentDescription="Menu"
                     android:padding="8dp"
                     android:src="@drawable/ic_notificaciones" />
 
-            </LinearLayout>
+
+            </RelativeLayout>
 
             <TextView
                 android:layout_width="wrap_content"
