--- a/Wrapsy/app/src/main/res/layout/activity_more_options.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_more_options.xml
@@ -1,110 +1,121 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
+    android:orientation="vertical"
     android:background="#E6CEED"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".moreOptions">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:orientation="vertical" >
+            android:orientation="vertical">
+            <RelativeLayout
+                android:id="@+id/top_bar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp">
+
+                <ImageView
+                    android:id="@+id/basketIcon"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
+                    android:layout_margin="5dp"
+                    android:contentDescription="Shopping basket"
+                    android:padding="8dp"
+                    android:src="@drawable/ic_wrapsy" />
+
+                <ImageView
+                    android:id="@+id/menuIcon"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_margin="5dp"
+                    android:background="@drawable/circleyellow"
+                    android:contentDescription="Menu"
+                    android:padding="8dp"
+                    android:src="@drawable/ic_notificaciones" />
+
+
+            </RelativeLayout>
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_below="@id/iv_favorites"
+            android:layout_marginTop="60dp"
+            android:layout_centerHorizontal="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="20dp">
+
+            <Button
+                android:id="@+id/btn_purchase_history"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Purchase History"
+                android:textColor="#000000"
+                android:background="@drawable/edit_text_bg"
+                android:drawableEnd=""
+                android:gravity="center_vertical|start"
+                android:padding="16dp" />
+
+            <Button
+                android:id="@+id/btn_payment_options"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edit_text_bg"
+                android:text="Payment Options"
+                android:textColor="#000000"
+                android:drawableEnd=""
+                android:gravity="center_vertical|start"
+                android:padding="16dp"
+                android:layout_marginTop="16dp" />
+
+            <Button
+                android:id="@+id/btn_about_us"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edit_text_bg"
+                android:text="About Us"
+                android:textColor="#000000"
+                android:drawableEnd=""
+                android:gravity="center_vertical|start"
+                android:padding="16dp"
+                android:layout_marginTop="16dp" />
 
         </LinearLayout>
 
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weight="vertical"
+            android:gravity="center" >
+
+            <Button
+                android:id="@+id/btn_logout"
+                android:layout_width="178dp"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/bottom_nav"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="300dp"
+                android:backgroundTint="#707B65"
+                android:text="Log out"
+                android:textColor="#FFFFFFFF" />
+        </LinearLayout>
+        </LinearLayout>
+
     </ScrollView>
-    <ImageView
-        android:id="@+id/iv_favorites"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/ic_wrapsy"
-        android:layout_alignParentStart="true"
-        android:layout_margin="12dp" />
 
 
-
-    <ImageView
-        android:id="@+id/iv_notifications"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_alignParentEnd="true"
-        android:layout_margin="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="18dp"
-        android:background="@drawable/circleyellow"
-        android:padding="8dp"
-        android:src="@drawable/ic_notificaciones" />
-
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_below="@id/iv_favorites"
-        android:layout_marginTop="60dp"
-        android:layout_centerHorizontal="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingHorizontal="20dp">
-
-        <Button
-            android:id="@+id/btn_purchase_history"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background=""
-            android:text="Purchase History"
-            android:textColor="#000000"
-            android:drawableEnd=""
-            android:gravity="center_vertical|start"
-            android:padding="16dp" />
-
-        <Button
-            android:id="@+id/btn_payment_options"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background=""
-            android:text="Payment Options"
-            android:textColor="#000000"
-            android:drawableEnd=""
-            android:gravity="center_vertical|start"
-            android:padding="16dp"
-            android:layout_marginTop="16dp" />
-
-        <Button
-            android:id="@+id/btn_about_us"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background=""
-            android:text="About Us"
-            android:textColor="#000000"
-            android:drawableEnd=""
-            android:gravity="center_vertical|start"
-            android:padding="16dp"
-            android:layout_marginTop="16dp" />
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:weight="vertical"
-        android:gravity="center" >
-
-        <Button
-            android:id="@+id/btn_logout"
-            android:layout_width="178dp"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/bottom_nav"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="20dp"
-            android:layout_marginTop="300dp"
-            android:backgroundTint="#707B65"
-            android:text="Log out"
-            android:textColor="#FFFFFFFF" />
-    </LinearLayout>
 
 
 
@@ -114,4 +125,4 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true" />
 
-</RelativeLayout>
+</LinearLayout>
