--- a/Wrapsy/app/src/main/res/layout/activity_profilelists.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_profilelists.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:orientation="vertical"
     android:background="#FFFEE8"
@@ -277,11 +278,11 @@
                     <ImageView
                         android:layout_width="55dp"
                         android:layout_height="55dp"
-                        android:src="@drawable/carrito_verde"/>
+                        android:src="@drawable/flores_tejidas"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Carrito verde"
+                        android:text="Flores tejidas"
                         android:textSize="12sp"
                         android:textColor="#4C4C4C"/>
 
@@ -344,9 +345,10 @@
                     android:layout_above="@+id/bottom_nav"
                     android:layout_centerHorizontal="true"
                     android:layout_marginBottom="20dp"
-                    android:backgroundTint="#707B65"
+                    android:backgroundTint="@color/verdeOlivaGrisaceo"
+                    app:cornerRadius="8dp"
                     android:text="New list"
-                    android:textColor="#FFFFFFFF"/>
+                    android:textColor="@color/cremaPalido"/>
             </LinearLayout>
         </LinearLayout>
 
