--- a/Wrapsy/app/src/main/res/layout/activity_sing_up_adress.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_sing_up_adress.xml
@@ -23,7 +23,7 @@
             android:layout_height="50dp"
             android:layout_marginTop="30dp"
             android:contentDescription="@string/app_name"
-            android:src="@drawable/icono_wrapsy" />
+            android:src="@drawable/ic_wrapsy" />
 
         <TextView
             android:layout_width="wrap_content"
