--- a/Wrapsy/app/src/main/res/values/colors.xml
+++ b/Wrapsy/app/src/main/res/values/colors.xml
@@ -21,4 +21,5 @@
     <color name="background_cream">#FFFBE6</color>
     <color name="purple_button">#BD9AC8</color>
     <color name="dark_green">#4A5D41</color>
+    <color name="amarillo_dorado">#f9d55f</color>
 </resources>
