--- a/Wrapsy/app/src/main/res/layout/activity_more_optionspayment_options.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_more_optionspayment_options.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#E6CEED"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -112,9 +113,10 @@
         android:layout_above="@+id/bottom_nav"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp"
-        android:backgroundTint="#707B65"
         android:text="Add Card"
-        android:textColor="#FFFFFFFF" />
+        android:textColor="@color/cremaPalido"
+        android:backgroundTint="@color/verdeOlivaGrisaceo"
+        app:cornerRadius="8dp" />
 
     <LinearLayout
         android:id="@+id/bottom_nav"
