--- a/Wrapsy/app/src/main/res/layout/activity_more_optionspayment_options.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_more_optionspayment_options.xml
@@ -1,34 +1,59 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/main"
+    android:orientation="vertical"
     android:background="#E6CEED"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".moreOptions">
 
-    <ImageView
-        android:id="@+id/iv_favorites"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/ic_wrapsy"
-        android:layout_alignParentStart="true"
-        android:layout_margin="12dp" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:orientation="vertical">
+            <RelativeLayout
+                android:id="@+id/top_bar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp">
 
-    <ImageView
-        android:id="@+id/iv_notifications"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_alignParentEnd="true"
-        android:layout_margin="16dp"
-        android:background="@drawable/circleyellow"
-        android:padding="8dp"
-        android:src="@drawable/ic_notificaciones" />
+                <ImageView
+                    android:id="@+id/basketIcon"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
+                    android:layout_margin="5dp"
+                    android:contentDescription="Shopping basket"
+                    android:padding="8dp"
+                    android:src="@drawable/ic_wrapsy" />
+
+                <ImageView
+                    android:id="@+id/menuIcon"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_margin="5dp"
+                    android:background="@drawable/circleyellow"
+                    android:contentDescription="Menu"
+                    android:padding="8dp"
+                    android:src="@drawable/ic_notificaciones" />
+
+
+            </RelativeLayout>
 
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="4dp"
         android:text="Payments Options"
         android:textColor="#333333"
         android:textSize="27sp"
@@ -39,9 +64,9 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:background="@drawable/card_background"
-        android:elevation="4dp"
+        android:elevation="6dp"
         android:orientation="vertical"
-        android:padding="25dp">
+        android:padding="30dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -104,106 +129,36 @@
     </LinearLayout>
 
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:weight="vertical">
+
+                <Button
+                    android:id="@+id/btn_logout"
+                    android:layout_width="178dp"
+                    android:layout_height="wrap_content"
+                    android:layout_above="@+id/bottom_nav"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="65dp"
+                    android:layout_marginBottom="20dp"
+                    android:backgroundTint="#707B65"
+                    android:text="Log out"
+                    android:textColor="#FFFFFFFF" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </ScrollView>
 
 
-    <Button
-        android:id="@+id/btn_logout"
-        android:layout_width="178dp"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/bottom_nav"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
-        android:text="Add Card"
-        android:textColor="@color/cremaPalido"
-        android:backgroundTint="@color/verdeOlivaGrisaceo"
-        app:cornerRadius="8dp" />
-
-    <LinearLayout
-        android:id="@+id/bottom_nav"
+    <include
+        android:layout="@layout/bottom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="#B6E388"
-        android:orientation="horizontal"
-        android:layout_alignParentBottom="true">
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true" />
 
-        <LinearLayout
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:layout_width="0dp"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Stores"
-                android:textSize="18sp" />
-
-            <ImageView
-                android:src="@drawable/ic_store"
-                android:layout_width="30dp"
-                android:layout_height="30dp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:layout_width="0dp"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Orders"
-                android:textSize="18sp" />
-
-            <ImageView
-                android:src="@drawable/ic_orders"
-                android:layout_width="30dp"
-                android:layout_height="30dp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:layout_width="0dp"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Coupons"
-                android:textSize="18sp" />
-
-            <ImageView
-                android:src="@drawable/ic_coupon"
-                android:layout_width="30dp"
-                android:layout_height="30dp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:layout_width="0dp"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Profile"
-                android:textSize="18sp" />
-
-            <ImageView
-                android:src="@drawable/ic_profile"
-                android:layout_width="24dp"
-                android:layout_height="24dp" />
-        </LinearLayout>
     </LinearLayout>
-</RelativeLayout>
-
-
 
 
